--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
     <h1>Let's get Social!</h1>
     
   </div>
-  <div class="social-links"> 
-  <a  href="https://github.com/meeramenon07" target="_blank" class=" btn contact-point"><i class="fab fa-github"></i></a>
+  <div class="profile-link"> 
+  <a  id = "profile-link" href="https://github.com/meeramenon07" target="_blank" class=" btn contact-point"><i class="fab fa-github"></i></a>
   
   <a href="https://twitter.com/EdtechByMeera" target="_blank" class="btn contact-point"><i class="fab fa-twitter"></i></a>
 
